Scrum 44 nest be Supervisor Registration using Guard and implemented Repository Layer
